Fixed an issue with the placement of the title. It looks good now on mobile.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,12 +10,12 @@
   --border: 2px dotted white;
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+}*/
 
 /*html * {
   border: var(--border);
@@ -70,21 +70,22 @@ h3 {
 @media screen and (max-width: 768px) {
   .title-header {
     position: absolute;
-    top: 2rem;
-    left: 180px;
+    top: 1rem;
+    left: 160px;
     margin-top: 1.4rem;
+    width: 40vw;
   }
 
   h1 {
-    font-size: 3.5rem;
+    font-size: 2.8rem;
   }
 
   h2 {
-    font-size: 3.1rem;
+    font-size: 2.5rem;
   }
 
   h3 {
-    font-size: 1.3rem;
+    font-size: 1rem;
   }
 }
 
@@ -92,7 +93,6 @@ body::before,
 body::after {
   content: "";
   position: absolute;
-  inset: 10px;
   z-index: -1;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
   transform-origin: center center;
@@ -103,11 +103,13 @@ body::after {
 }
 
 body::before {
+  inset: 10px;
   background: var(--background-layer-1);
   transform: rotate(-1deg);
 }
 
 body::after {
+  inset: 10px;
   background-color: var(--default-green);
   background-image:
     linear-gradient(90deg,
@@ -152,8 +154,9 @@ body::after {
 
 @media screen and (max-width: 768px) {
   .portrait {
-    width: 180px;
-    height: 180px;
+    width: 160px;
+    height: 160px;
+    margin-top: 1rem;
   }
 
   body::before,
